# SzufladaV2

./: .gitignore  Dockerfile  kod_esp.txt
.cursor/plans/: szuflada_autonomous_system_88ad2e8f.plan.md
rover_autonomy/: package.xml  setup.py
rover_autonomy/config/: nav2_params.yaml  slam_params.yaml
rover_autonomy/launch/: autonomy_launch.py  nav2_launch.py  rover_launch.py  slam_launch.py
rover_autonomy/rover_autonomy/: cmd_vel_bridge.py  distance_sensor_mqtt.py  distance_sensor_serial.py  encoder_calibration.py  keyboard_led.py  move_distance.py  mqtt_bridge.py  obstacle_avoidance.py  odometry_node.py  robot_description.py  rover_teleop.py  visual_tracker.py  wall_follower.py
